<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ranked_logo"
            app:srcCompat="@drawable/icon_x192" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="41dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/minecraft_speedrun"
                android:textColor="#142c34"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/ranked_statistics"
                android:textColor="#142c34"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/aboutText1"
        android:textColor="#142C34"
        android:fontFamily="@font/quicksand_semibold"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textViewAbout2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/aboutText2"
        android:textColor="#142C34"
        android:fontFamily="@font/quicksand_semibold"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="15sp" />


    <Button
        android:id="@+id/buttonBackAbout"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="#84cc34"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/back"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        app:cornerRadius="0dp"/>

</LinearLayout>