<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
    tools:context=".EloLeaderboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ranked_logo"
            app:srcCompat="@drawable/icon_x192" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="41dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/minecraft_speedrun"
                android:textColor="#142c34"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/ranked_statistics"
                android:textColor="#142c34"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/place"
            android:textColor="#142C34"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/player"
            android:textColor="#142C34"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/elo"
            android:textColor="#142C34"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="360dp"
        android:layout_height="440dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textViewLeaderboardPlace"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/textViewLeaderboardPlayer"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview" />

            <TextView
                android:id="@+id/textViewLeaderboardElo"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonBackElo"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#84cc34"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/back"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        app:cornerRadius="0dp"/>

</LinearLayout>