<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ranked_logo"
            app:srcCompat="@drawable/icon_x192" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="41dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/minecraft_speedrun"
                android:textColor="#142c34"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/ranked_statistics"
                android:textColor="#142c34"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/steve"
            android:contentDescription="@string/skin_head" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/textViewUserNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semibold"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textColor="#142C34" />

                <TextView
                    android:id="@+id/textViewUserElo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textColor="#84CC34" />

                <TextView
                    android:id="@+id/textViewUserPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textColor="#1F6A6A"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <TextView
                    android:id="@+id/textViewUserLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/last_online"
                    android:textSize="18sp"
                    android:textColor="#142C34" />

                <TextView
                    android:id="@+id/textViewUserLastSeen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/quicksand_semibold"
                    android:text="@string/textview"
                    android:textColor="#1F6A6A"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewUserRankedStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_semibold"
        android:textColor="#142C34"
        android:textStyle="italic"
        android:text="@string/ranked_statistics"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewUserPlayedMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/played_matches_total_season"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserTotalPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#84CC34"
            android:textSize="18sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewSlash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/slash"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserSeasonPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#1F6A6A"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewWinStreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/winstreak_best_current"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserHWS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#84CC34"
            android:textSize="18sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewSlash2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/slash"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserCWS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#1F6A6A"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/elo_best_previous_season"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewBestElo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#84CC34"
            android:textSize="18sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/textViewSlash3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/slash"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPrevElo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/xxxx"
            android:textColor="#1F6A6A"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewUserPersonnal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/personnal_best_record"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/textview"
            android:textColor="#1F6A6A"
            android:textSize="18sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewUserWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/winrate_season"
            android:textColor="#142C34"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUserWinP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/textview"
            android:textColor="#1F6A6A"
            android:textSize="18sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerMediaLayout"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewYoutubeLogo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/youtube"
            android:contentDescription="@string/youtube_logo" />

        <ImageView
            android:id="@+id/imageViewTwitchLogo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/twitch"
            android:contentDescription="@string/twitch_logo" />

        <ImageView
            android:id="@+id/imageViewDiscordLogo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/discord"
            android:contentDescription="@string/discord_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/buttonBackUser"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#84cc34"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/back"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        app:cornerRadius="0dp"/>


</LinearLayout>